RESOLVED FIXED156185
[iOS] Crash when playing <video> after playing Web Audio
https://bugs.webkit.org/show_bug.cgi?id=156185
Summary [iOS] Crash when playing <video> after playing Web Audio
Jer Noble
Reported 2016-04-04 15:27:26 PDT
[iOS] Crash when playing <video> after playing Web Audio
Attachments
Patch (4.32 KB, patch)
2016-04-04 15:37 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2016-04-04 15:28:03 PDT
Jer Noble
Comment 2 2016-04-04 15:37:48 PDT
David Kilzer (:ddkilzer)
Comment 3 2016-04-04 20:22:30 PDT
(In reply to comment #1) > <rdar://problem/10177005> Is this really the correct radar?
WebKit Commit Bot
Comment 4 2016-04-04 22:39:23 PDT
Comment on attachment 275582 [details] Patch Clearing flags on attachment: 275582 Committed r199042: <http://trac.webkit.org/changeset/199042>
WebKit Commit Bot
Comment 5 2016-04-04 22:39:26 PDT
All reviewed patches have been landed. Closing bug.
Jer Noble
Comment 6 2016-04-05 00:12:52 PDT
(In reply to comment #3) > (In reply to comment #1) > > <rdar://problem/10177005> > > Is this really the correct radar? Whoops. Correct radar: <rdar://problem/25468815>
Note You need to log in before you can comment on or make changes to this bug.